<resources>
    <string name="app_name">Meowee</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="tra_cuu_meo">Tra cứu mèo</string>
    <string name="tracuu">Tra Cứu Mèo</string>
    <string name="take_cam">Chụp ảnh</string>
    <string name="choose_img">Chọn ảnh</string>
    <string name="notifi_res">Chúng tôi cho rằng đến 85% đây là một con</string>
    <string name="predict_res">Mèo anh lông trắng</string>
    <string name="buy_now">Mua luôn!</string>
    <string name="user_profile">Thông tin cá nhân</string>
    <string name="phone">Điện thoại</string>
    <string name="app_banner">App Banner</string>
    <string name="app_logo">App Logo</string>
    <string name="sign_up">Đăng kí</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="small_intro">Chúng tôi cung cấp đa dạng các loại mèo vô cùng đáng yêu và sang chảnh cho bạn.</string>
    <string name="big_intro">Ở Meowee, khách hàng mới là hoàng thượng!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Chào mừng đến với</string>
    <string name="meowee">MEOWEE</string>
    <string name="dont_have_account">Chưa có tài khoản?</string>
    <string name="enter_your_email">Nhập địa chỉ email của bạn</string>
    <string name="email_example">example@company.com</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="forgotPassword">Quên mật khẩu?</string>
    <string name="already_have_account">Đã có tài khoản?</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="fullname">Họ và tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="invalid_email">Địa chỉ Email không hợp lệ!</string>
    <string name="failed_to_register">Đăng kí tài khoản không thành công!\nCó thể email này đã được sử dụng</string>
    <string name="invalid_password">Mật khẩu không hợp lệ! Mật khẩu phải chứa ít nhất 6 kí tự và không chứa khoảng trắng</string>
    <string name="register_successful">Đăng kí tài khoản thành công! Vui lòng kiểm tra email để xác thực tài khoản trước khi đăng nhập!</string>
    <string name="invalid_name">Họ và tên không hợp lệ!</string>
    <string name="invalid_phone_num">Số điện thoại không hợp lệ!</string>
    <string name="save_user_success">Lưu thông tin người dùng thành công!</string>
    <string name="save_user_failed">Lưu thông tin người dùng không thành công!</string>
    <string name="you_havent_verify_email">Bạn chưa xác thực tài khoản, hãy kiểm tra email để xác thực tài khoản nhé</string>
    <string name="sign_in_sucess">Đăng nhập thành công!</string>
    <string name="sign_in_failed">Đăng nhập không thành công! Vui lòng đảm bảo kết nối internet và kiểm tra lại email, mật khẩu</string>
    <string name="send_verification_email_failed">Gửi email xác thực không thành công! Vui lòng thử lại sau</string>
    <string name="home">Trang chủ</string>
    <string name="stores_map">Chuỗi cửa hàng</string>
    <string name="recognize">Nhận dạng</string>
    <string name="favorite">Yêu thích</string>
    <string name="profile">Tài khoản</string>
    <string name="home_english">Home</string>
    <string name="dont_let_email_password_empty">Không được để trống email hay mật khẩu!</string>
    <string name="enter_email_and_we_will_help_you_reset_password">Bạn quên mật khẩu ư? Đừng lo lắng!\nHãy nhập địa chỉ email và chúng tôi sẽ giúp bạn!</string>
    <string name="email_seem_like_incorrect_please_check">Địa chỉ email có vẻ không đúng, bạn vui lòng kiểm tra lại nhé!</string>
    <string name="list_branch">list_branch</string>
    <string name="list_branch_heading">Danh sách cửa hàng</string>
    <string name="hi">Hi</string>
    <string name="let_see_what_we_have">Xem chúng tôi có gì này!</string>
    <string name="cart">cart</string>
    <string name="filter">filter</string>
    <string name="catimage">Cat Image</string>
    <string name="cat_type">Phân loại:</string>
    <string name="confirm">Xác nhận</string>
    <string name="try_connect_again">Thử kết nối lại</string>
    <string name="please_check_your_internet">Thử kiểm tra lại kết nối internet đi bà dà!</string>
    <string name="oops_no_internet">Oops! Hông có kết nối!</string>
    <string name="still_no_internet"><![CDATA[Vẫn chưa có kết nối internet :<]]></string>
    <string name="this_is_cat_name">This is cat name</string>
    <string name="button_minus_quantity">Button Minus Quantity</string>
    <string name="button_add_quantity">Button Add Quantity</string>
    <string name="age">Độ tuổi:</string>
    <string name="color">Màu lông:</string>
    <string name="sex">Giới tính:</string>
    <string name="more_info">Thông tin thêm:</string>
    <string name="button_add_to_favorite">Button Add to favorite</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="added_to_favorites">Đã thêm vào danh sách yêu thích</string>
    <string name="removed_from_favorites">Đã xoá khỏi danh sách yêu thích</string>
    <string name="added_to_cart">Đã thêm vào giỏ hàng</string>
    <string name="facebook_app_id">837468867362307</string>
    <string name="facebook_client_token">82090f47310a7ea79e386d6f07313649</string>
    <string name="error_occurred_pls_try_again_later">Đã có lỗi xảy ra, xin thông cảm và thử lại sau.</string>
    <string name="this_feature_is_being_developed">Tính năng này đang trong giai đoạn phát triển!</string>
    <string name="filter_title">Bộ lọc sản phẩm</string>
    <string name="sexFilterTitle">Giới tính</string>
    <string name="male">Đực</string>
    <string name="female">Cái</string>
    <string name="colorFilterTitle">Màu lông</string>
    <string name="black">Đen</string>
    <string name="white">Trắng</string>
    <string name="gray">Xám</string>
    <string name="yellow">Vàng</string>
    <string name="brown">Nâu</string>
    <string name="ageFilterTitle">Độ tuổi</string>
    <string name="children">Mèo con</string>
    <string name="old_cat">Mèo trưởng thành</string>
    <string name="priceFilterTitle">Giá</string>
    <string name="minimumPrice">Tối thiểu</string>
    <string name="maximumPrice">Tối đa</string>
    <string name="reset">Đặt lại</string>
</resources>