<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInSignUpActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:paddingVertical="15dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="15dp"
        android:text="@string/sign_in"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toTopOf="@id/buttonSignUp"/>

    <TextView
        android:id="@+id/textviewSmallIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/small_intro"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/buttonSignIn"/>

    <TextView
        android:id="@+id/textviewBigIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_intro"
        android:textSize="30sp"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textviewSmallIntro"/>

    <ImageView
        android:id="@+id/imageTopBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_banner"
        android:scaleType="centerCrop"
        android:src="@drawable/main_banner"
        app:layout_constraintBottom_toTopOf="@id/textviewBigIntro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:src="@drawable/app_logo_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>