<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ProductListFragment">

    <ImageView
        style="@style/logo"
        android:id="@+id/imageview_home_app_logo"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hi"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageview_home_app_logo"
        app:layout_constraintTop_toBottomOf="@id/imageview_home_app_logo" />

    <TextView
        android:id="@+id/textview_home_small_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/let_see_what_we_have"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/textview_greeting"
        app:layout_constraintTop_toBottomOf="@id/textview_greeting" />

    <ImageButton
        style="@style/cartBtn"
        android:id="@+id/imagebutton_home_mycart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cart"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_greeting" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchview_home"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/super_rounded_rectangle"
            android:layout_marginTop="20dp"
            android:paddingEnd="15dp"
            android:paddingStart="0dp"
            android:paddingVertical="5dp"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toBottomOf="@id/textview_home_small_intro"
            app:layout_constraintStart_toStartOf="@id/textview_home_small_intro"
            app:layout_constraintEnd_toStartOf="@id/imagebutton_filter">

        </androidx.appcompat.widget.SearchView>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/img_mic"
        android:src="@drawable/ic_baseline_mic"
        app:layout_constraintBottom_toBottomOf="@id/searchview_home"
        app:layout_constraintEnd_toEndOf="@id/searchview_home"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="@id/searchview_home"
        app:layout_constraintTop_toTopOf="@id/searchview_home" />



    <ImageButton
        style="@style/filter"
        android:id="@+id/imagebutton_filter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/filter"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/searchview_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchview_home"
        app:layout_constraintTop_toTopOf="@id/searchview_home" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchview_home"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="76dp" />

    <ProgressBar
        android:id="@+id/progressbar_home_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/recyclerview_home"
        app:layout_constraintEnd_toEndOf="@id/recyclerview_home"
        app:layout_constraintStart_toStartOf="@id/recyclerview_home"
        app:layout_constraintTop_toTopOf="@id/recyclerview_home" />

    <ScrollView
        android:id="@+id/filters_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_filter_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/filter_title"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_sex_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sexFilterTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="@id/title_filter_menu"
                app:layout_constraintTop_toBottomOf="@id/title_filter_menu" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/male"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_sex_filter"
                app:layout_constraintTop_toBottomOf="@id/title_sex_filter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/female"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/button_select_filter_sex_male"
                app:layout_constraintTop_toTopOf="@id/button_select_filter_sex_male" />

            <TextView
                android:id="@+id/title_color_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/colorFilterTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="@id/button_select_filter_sex_male"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_sex_male" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/black"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_color_filter"
                app:layout_constraintTop_toBottomOf="@id/title_color_filter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_color_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/white"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/button_select_filter_color_black"
                app:layout_constraintTop_toBottomOf="@id/title_color_filter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_color_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/gray"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/button_select_filter_color_white"
                app:layout_constraintTop_toBottomOf="@id/title_color_filter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_color_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/yellow"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_color_filter"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_color_black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_color_brown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/brown"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/button_select_filter_color_black"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_color_black" />

            <TextView
                android:id="@+id/title_age_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ageFilterTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="@id/title_filter_menu"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_color_yellow" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_age_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/children"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_age_filter"
                app:layout_constraintTop_toBottomOf="@id/title_age_filter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_age_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/old_cat"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/button_select_filter_age_low"
                app:layout_constraintTop_toTopOf="@id/button_select_filter_age_low" />

            <TextView
                android:id="@+id/title_price_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/priceFilterTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="@id/title_filter_menu"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_age_low" />

            <EditText
                android:id="@+id/edittextMinimumPrice"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_white_rectangle"
                android:hint="@string/minimumPrice"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_price_filter"
                app:layout_constraintTop_toBottomOf="@id/title_price_filter" />

            <EditText
                android:id="@+id/edittextMaximumPrice"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_white_rectangle"
                android:hint="@string/maximumPrice"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/edittextMinimumPrice"
                app:layout_constraintTop_toBottomOf="@id/title_price_filter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_filter_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#28A745"
                android:text="@string/confirm"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittextMinimumPrice" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_filter_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#dc3545"
                android:text="@string/reset"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/button_filter_confirm"
                app:layout_constraintTop_toTopOf="@id/button_filter_confirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>